fixed overlapping search bar

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -7,7 +7,7 @@
   position:absolute;
   left:350px;
   bottom:1px;
-  z-index:2;
+  z-index:0;
   width: 200px;
   box-sizing: border-box;
   border: 2px solid #ccc;
@@ -20,6 +20,9 @@
   -webkit-transition: width 0.4s ease-in-out;
   transition: width 0.4s ease-in-out;
 }
+
+
+
 #SearchBar {
   border: none;
   font-size: 18px;
@@ -28,12 +31,28 @@
   transition: width 0.4s ease-in-out;
   background-color: #FCFCFC;
 }
-@media only screen and (max-width: 1280px) {
-  #SearchBar {
-    margin: 30px 0;
+
+
+@media only screen and (min-width: 1255px) and (max-width: 1319px) {
+  #searchForm{
+    display: flex;
   }
-     
-    }
+  #searchLink{
+    display: inline-block;
+    margin-left: 15px;
+  }
+  #aboutLink{
+    margin-left: 10px;
+  }
+  #closebutton{
+    margin-top: 6px;
+    margin-right: 10px;
+  }
+  header svg{
+    margin-right: 70px;
+  }
+}
+
 
 
 #SearchBar1 {
